ссылка на таблицу

--- a/app.html
+++ b/app.html
@@ -20,6 +20,6 @@
        <label></label>
            <button type="submit">Envoyer</button>
     </form>
-    <a href="table/table.html">Таблица</a>
+    <a href="table/table_form.html">Таблица</a>
 </body>
 </html>
