--- a/table/table_form.html
+++ b/table/table_form.html
@@ -11,14 +11,14 @@
         <table class="center">
             <caption> страны участники Первой Мировой войны </caption>
             <thead>
-                <tr >
+                <tr>
                     <th class="t-head">Год:</th>
                     <th class="t-head">Антанта</th>
                     <th class="t-head3">Государства изменившие блок</th>
                     <th class="t-head">Центральные государства</th>
                     <th class="t-head_neutral">Нейтральные государства</th>
                 </tr>
-            
+
             <tfoot>
                 <tr>
                     <td class="t-foot" colspan="5">Год окончания войны - 1918 </td>
@@ -29,17 +29,17 @@
                     <td class="column-date column-border" rowspan="7">1914</td>
                     <td class="column-center column-border flag UK">Великобритания</td>
                     <td class="column-center column-border" rowspan="7"></td>
-                    <td class="column-center-ch column-border flag GER">Германия</td>
+                    <td class="text-align flag GER">Германия</td>
                     <td class="column-border flag SWE">Швеция</td>
                 </tr>
                 <tr>
                     <td class="column-center column-border flag FRA ">Франция</td>
-                    <td class="column-center-ch column-border flag AUS">Австро-Венгрия</td>
+                    <td class="text-align column-border flag AUS">Австро-Венгрия</td>
                     <td class="column-border flag SWE">Швейцария</td>
                 </tr>
                 <tr>
                     <td class="column-center column-border flag RUS">Россия</td>
-                    <td class="column-center-ch column-border flag TUR " rowspan="5">Турция</td>
+                    <td class="text-align column-border flag TUR " rowspan="5">Турция</td>
                     <td class="column-border flag DEN">Дания</td>
 
                 </tr>
@@ -62,7 +62,7 @@
                 <tr>
                     <td class="column-date column-border">1915</td>
                     <td class="column-italy column-border flag ITA" colspan="2"> Италия </td>
-                    <td class="column-center-ch column-border flag BUL" rowspan="5">Болгария</td>
+                    <td class="text-align column-border flag BUL" rowspan="5">Болгария</td>
                     <td class="column-border flag NOR">Норвегия</td>
                 </tr>
                 <tr>
@@ -88,7 +88,7 @@
     </div>
     </table>
 
-
+    
 
 </body>
 </html>
