--- a/table/table_form.html
+++ b/table/table_form.html
@@ -37,7 +37,7 @@
                     <tr>
                         <td class="column-center column-border flag FRA ">Франция</td>
                         <td class="text-align column-border flag AUS">Австро-Венгрия</td>
-                        <td class="column-border flag SWE">Швейцария</td>
+                        <td class="column-border flag CHE">Швейцария</td>
                     </tr>
                     <tr>
                         <td class="column-center column-border flag RUS">Россия</td>
